# provenance-graph-framework

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  PGF-DECISION-LOG.md  PGF-PROJECT-CONTEXT.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: append-event.py  block-release.py  no-secret-leak.py  validate-record.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cli/pgf/: __init__.py  __main__.py
docs/: architecture.md  build-plan.md  claude-code-setup.md  codex-setup.md  faq.md  phase-1-freeze.md  prd-v0_3.md  quickstart.md  review-and-execution-plan.md  schema-reference.md  security-model.md
examples/association-board-brief/: draft.md  events.jsonl  intake.md
instructions/: artifact.association-board-brief.md  review.accessibility-and-disclosure.md  review.materiality.md
prompts/codex/: architecture-challenge.md  pr-review.md  security-review.md
provenance/: confidence-scale.md  event-taxonomy.md  graph-model.md  materiality-policy.md  release-state-machine.md  source-hierarchy.md
schemas/v0/: approval.schema.json  artifact.schema.json  claim.schema.json  edge.schema.json  evidence.schema.json  graph-event.schema.json  release.schema.json  review.schema.json  (+1 more)
templates/: accessibility-note.md  approval-record.md  claim-register.md  contradiction-packet.md  disclosure-note.md  evidence-plan.md  intake.md  release-package-index.md  review-packet.md
workflows/: approve-and-package.yaml  intake-to-claim-graph.yaml  verify-and-escalate.yaml
(+18 files in other folders)
