[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pgf"
version = "0.1.0.dev0"
description = "Provenance Graph Framework: governed, traceable AI-assisted work products."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Data Strategy Lab LLC" }]
dependencies = [
    "jsonschema",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

# The reference implementation lives under cli/ so `import pgf` and
# `python -m pgf` resolve to cli/pgf/. Full packaging is exercised in Phase 2.
[tool.setuptools]
package-dir = { "" = "cli" }

[tool.setuptools.packages.find]
where = ["cli"]
